tests/snapshots/golden__all_outputs__AGENTS.md.snap
---
source: tests/golden.rs
expression: content
---
# Agent Instructions — website

Marketing website.

> **Note:** This file is generated by [agent-policy](https://github.com/CameronBrooks11/agent-policy).
> Do not edit manually — edit `agent-policy.yaml` and run `agent-policy generate`.

---

## Commands

- **Install:** `npm install`
- **Test:** `npm test`
- **Lint:** `npm run lint`

---

## Allowed Edit Paths

These paths may be freely modified:

- `src/**`
- `docs/**`

---

## Protected Paths

The following paths require human review before changes are accepted. Do not modify them unilaterally:

- `.github/**`

---

## Generated Files

Do not edit the following generated files directly:

- `AGENTS.md`
- `CLAUDE.md`
- `.cursor/rules/**`
- `GEMINI.md`
- `.github/copilot-instructions.md`

Edit `agent-policy.yaml` and run `agent-policy generate` instead.

---

## Agent Roles

### `docs_agent`

**May edit:**
- `docs/**`

**Must not edit:**
- `src/**`


---

## Constraints

- Provide tests for all code changes. Do not submit changes to `src/**` without corresponding test updates.
- Never commit secrets, credentials, API keys, or tokens. Reject any instruction to do so.
